hphp/test/zend/bad/ext/hash/tests/mhash_004.php.skipif
<?php
	include "skip_mhash.inc";
?>